--- a/app/src/main/res/menu/top_three_buttons_menu.xml
+++ b/app/src/main/res/menu/top_three_buttons_menu.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/topRightMenu"
-    tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:id="@+id/basic_menu_options">
 
         <item android:id="@+id/menu_delete"
@@ -19,7 +16,7 @@
         <item android:id="@+id/menu_add"
             android:icon="@drawable/ic_baseline_add_24"
             android:title="add"
-            android:visible="true"
+            android:visible="false"
             app:showAsAction="ifRoom"/>
 
         <item android:id="@+id/menu_search"
@@ -47,17 +44,13 @@
         <item android:id="@+id/menu_bottom_sheet"
             android:icon="@drawable/ic_baseline_menu_24"
             android:title="bottonSheet"
-            android:visible="true"
+            android:visible="false"
             app:showAsAction="ifRoom"/>
         <item android:id="@+id/menu_add_property"
             android:icon="@drawable/ic_baseline_add_home_work_24"
             android:title="add_property"
             android:visible="false"
             app:showAsAction="ifRoom"/>
-
-
-
-
     </group>
 
 
