--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,5 +36,7 @@
     <color name="rec_view_scheduled_completed">#82898d</color>
     <color name="rec_view_scheduled_late">#770000</color>
     <color name="title_rec_view_stake">#E2D8D7</color>
+    <color name="rec_view_payable">#f3ac23</color>
+    <color name="rec_view_receivable">#eaad81</color>
 
 </resources>
