--- a/app/src/main/res/layout/fragment_all_transactions.xml
+++ b/app/src/main/res/layout/fragment_all_transactions.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutDescription="@xml/fragment_all_transactions_scene"
-    tools:context=".fragments.transactions.AllTransactions.AllTransactions">
-
+    tools:context=".fragments.transactions.AllTransactions.AllTransactions"
+    android:paddingTop="10dp">
 
     <!-- Container_________________________________________________
     _________________________________________________________________
@@ -17,11 +17,12 @@
         android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:background="@color/black"
+        android:layout_marginHorizontal="10dp"
+        android:background="@drawable/background_accounts_first"
         android:contentDescription="container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_selectMonth"
@@ -275,6 +276,7 @@
         android:id="@+id/relativeLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
