--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dark_grey"
+    android:visibility="visible"
     tools:context=".activities.MainActivity">
 
 
@@ -12,12 +13,13 @@
         android:id="@+id/stakeHolderDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:background="@drawable/background_accounts_first"
         android:padding="15dp"
-        android:layout_margin="10dp"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/txt_montly_summary">
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline3"
             android:layout_width="wrap_content"
@@ -26,60 +28,65 @@
             app:layout_constraintGuide_begin="232dp" />
 
         <TextView
-            android:id="@+id/txtViewBalance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="$50,000"
-            android:textColor="@color/white"
-            android:textSize="34sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/balance_stake"
-            android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Sum of this month transactions"
+            android:layout_marginTop="15dp"
+            android:text="@string/sum_of_this_month_transactions"
+            android:textSize="15dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtViewBalance" />
+            app:layout_constraintTop_toBottomOf="@+id/textInitialPayables" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/textTitleReceivables"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Initial Balance"
+            android:text="@string/receivables"
+            android:textColor="@color/transaction_Schedule_receivables"
+            android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textSumOfCash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$10,000"
+            android:textSize="20sp"
+
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toTopOf="@+id/textView3" />
 
         <TextView
-            android:id="@+id/textInitialBalance"
+            android:id="@+id/textInitialRecivables"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="$15,000"
-            app:layout_constraintBottom_toBottomOf="@+id/textView10"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toTopOf="@+id/textView10" />
+            android:text="$15,000.00"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textTitleReceivables" />
+
+        <TextView
+            android:id="@+id/textTitlePayables"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/payables"
+            android:textColor="@color/transaction_Schedule_payables"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textInitialRecivables" />
+
+        <TextView
+            android:id="@+id/textInitialPayables"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="$2,000.00"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textTitlePayables" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.Toolbar
@@ -110,11 +117,11 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:background="@color/toolBar_color"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/stakeHolderDetails"
 
         />
@@ -132,7 +139,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_navigation_menu" />
 
+    <TextView
 
+        android:id="@+id/txt_montly_summary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/montly_summary_stake"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/stakeHolderDetails"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
