--- a/app/src/main/res/layout/fragment_transaction_display.xml
+++ b/app/src/main/res/layout/fragment_transaction_display.xml
@@ -15,58 +15,59 @@
             android:gravity="center"
             tools:context=".fragments.transactions.DisplayTransaction.TransactionDisplay"
            >
+
                 <LinearLayout
+                    android:id="@+id/layoutTransactionHolder"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@color/superDarkGrey"
                     android:orientation="horizontal"
-                    android:padding="25dp"
-                    android:background="@color/superDarkGrey">
+                    android:padding="25dp">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            app:layout_constraintBottom_toTopOf="@+id/guideline10"
-                            android:gravity="center"
-                            android:background="@drawable/background_transaction_display"
                             android:layout_marginHorizontal="40dp"
+                            android:background="@drawable/background_transaction_display"
+                            android:gravity="center"
+                            android:orientation="vertical"
                             android:padding="15dp"
-                            >
+                            app:layout_constraintBottom_toTopOf="@+id/guideline10">
 
                                 <TextView
                                     android:id="@+id/textAmount"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginBottom="10dp"
                                     android:text="$50,000,000.00"
                                     android:textColor="@color/white"
                                     android:textSize="32sp"
-                                    android:textStyle="bold"
-                                    android:layout_marginBottom="10dp"
-                                    />
+                                    android:textStyle="bold" />
+
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:orientation="horizontal"
                                     android:layout_marginBottom="10dp"
                                     android:gravity="center"
-                                    >
+                                    android:orientation="horizontal">
+
                                         <TextView
                                             android:id="@+id/txtCategoryIcon"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:text="💰"
-                                            android:textColor="@color/white"
-                                            />
+                                            android:textColor="@color/white" />
+
                                         <TextView
-                                            android:layout_marginLeft="5dp"
-                                            android:layout_marginStart="5dp"
                                             android:id="@+id/txtCategoryTitle"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
+                                            android:layout_marginStart="5dp"
+                                            android:layout_marginLeft="5dp"
                                             android:ellipsize="end"
                                             android:maxLines="1"
                                             android:text="Transportación"
-                                            android:textColor="@color/white"
-                                            />
+                                            android:textColor="@color/white" />
                                 </LinearLayout>
 
                                 <TextView
@@ -75,13 +76,10 @@
                                     android:layout_height="0dp"
                                     android:layout_weight="1"
                                     android:ellipsize="end"
-                                    android:maxLines="1"
+                                    android:gravity="center_horizontal"
                                     android:text="Paid by Juan Carlos"
-                                    android:textStyle="bold"
                                     android:textColor="@color/white"
-                                    />
-
-
+                                    android:textStyle="bold" />
 
 
                         </LinearLayout>
@@ -101,6 +99,36 @@
                     android:paddingVertical="20dp"
                     android:paddingHorizontal="30dp"
                     android:gravity="center">
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_marginVertical="7dp">
+
+                                <TextView
+                                    android:id="@+id/textAccountChosen"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginEnd="10dp"
+                                    android:layout_marginRight="10dp"
+                                    android:text="@string/account" />
+
+                                <TextView
+
+                                    android:id="@+id/textAccountChosenDisplay"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="30dp"
+                                    android:layout_marginLeft="30dp"
+                                    android:layout_weight="1"
+                                    android:ellipsize="end"
+                                    android:maxLines="1"
+                                    android:text="Gonzales Ortega" />
+
+
+                        </TableRow>
+
                         <TableRow
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -109,25 +137,24 @@
                             >
 
                                 <TextView
-                                    android:id="@+id/textAccountChosen"
+                                    android:id="@+id/textTransType"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="@string/account"
+                                    android:layout_marginEnd="10dp"
                                     android:layout_marginRight="10dp"
-                                    android:layout_marginEnd="10dp" />
+                                    android:text="@string/type" />
 
                                 <TextView
 
-                                    android:layout_marginLeft="30dp"
-                                    android:layout_marginStart="30dp"
-                                    android:id="@+id/textAccountChosenDisplay"
+                                    android:id="@+id/textTransTypeDisplay"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginStart="30dp"
+                                    android:layout_marginLeft="30dp"
                                     android:layout_weight="1"
                                     android:ellipsize="end"
                                     android:maxLines="1"
-                                    android:text="Gonzales Ortega"
-                                    />
+                                    android:text="Cash / Payable" />
 
 
                         </TableRow>
