--- a/app/src/main/res/layout/fragment_add_new_microaccount.xml
+++ b/app/src/main/res/layout/fragment_add_new_microaccount.xml
@@ -26,6 +26,17 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
+        <EditText
+            android:id="@+id/ed_txt_role"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:hint="@string/description"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ed_txt_name" />
+
         <Button
             android:id="@+id/btn_confirm_NewMicro"
             android:layout_width="match_parent"
@@ -35,7 +46,7 @@
             android:text="@string/confirm"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ed_txt_name" />
+            app:layout_constraintTop_toBottomOf="@+id/ed_txt_role" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
