--- a/app/src/main/res/layout/rec_view_item_all_micros.xml
+++ b/app/src/main/res/layout/rec_view_item_all_micros.xml
@@ -57,13 +57,15 @@
             app:layout_constraintTop_toTopOf="@+id/text_Account_name_Micros"
             app:layout_constraintVertical_bias="0.0" />
 
+<!--        role also means description         -->
         <TextView
-            android:id="@+id/text_micros_description"
+            android:id="@+id/text_micros_role"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:gravity="start"
             android:maxLines="3"
+            android:visibility="gone"
             android:text="Bodega 2 y 5"
             android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
