--- a/app/src/main/res/layout/fragment_add_new_microaccount.xml
+++ b/app/src/main/res/layout/fragment_add_new_microaccount.xml
@@ -14,17 +14,33 @@
         android:paddingBottom="20dp"
         tools:context=".fragments.transactions.NewTransaction.TransactionNew">
 
+        <TextView
+            android:id="@+id/ed_txt_role_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/light_grey"
+            app:layout_constraintStart_toStartOf="@+id/ed_txt_role"
+            app:layout_constraintTop_toBottomOf="@+id/ed_txt_role" />
+
         <EditText
             android:id="@+id/ed_txt_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:hint="@string/name"
-            android:inputType="text"
+            android:inputType="textPersonName|text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
+        <TextView
+            android:id="@+id/ed_txt_name_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/light_grey"
+            app:layout_constraintStart_toStartOf="@+id/ed_txt_name"
+            app:layout_constraintTop_toBottomOf="@+id/ed_txt_name" />
 
         <EditText
             android:id="@+id/ed_txt_role"
